fixed headshots on mobile; centered on desktop and above

--- a/styles.scss
+++ b/styles.scss
@@ -35,6 +35,7 @@ footer {
 
 /*The below is for the Landing (i.e. Home / Game+About) Page only*/
 #landing {
+
     #game{
         .title{
             text-transform: uppercase;
@@ -47,9 +48,10 @@ footer {
                 text-transform: uppercase;
                 margin-top: 100px;
 
-                /*TODO the below is an issue on tablet and mobile, potentially resolve with @media query
-                and/or look into Bulma's breakpoints*/
-                margin-bottom: -100px; /*For centering the headshots on desktop*/
+                @mixin desktop{
+                    /*For centering the headshots on desktop*/
+                    margin-bottom: -100px;
+                }
             }
         }
         .headshot{
